--- a/sass/elements/game/_profile.scss
+++ b/sass/elements/game/_profile.scss
@@ -1731,8 +1731,9 @@
         }
     }
 }
-#searched_user_root {
-    
+
+#searched_user_general{
+    width: 100%;
 }
 @keyframes an__profile__item-notAfford {
     100% {
