--- a/sass/elements/game/_general.scss
+++ b/sass/elements/game/_general.scss
@@ -279,7 +279,10 @@
 }
 .background {
     @include tablet {
-        background-size: 150% 100%;
-        background-position: 50%;
+        background-size: 150% 100% !important;
+        background-position: 50% !important;
+    }
+    @include mobileL {
+        background-size: 190% 100% !important;
     }
 }
