--- a/sass/elements/game/_chat.scss
+++ b/sass/elements/game/_chat.scss
@@ -320,6 +320,9 @@
         @include desktopS {
             height: 52px;
         }
+        @include laptopL {
+            height: 49px;
+        }
         @include laptopM {
             height: 47px;
         }
@@ -420,6 +423,7 @@
             border-radius: 0 1.375rem 1.375rem 1.375rem;
             color: $color-black;
             background: $color-white;
+           
         }
         &-user {
             border-radius: 1.375rem 0 1.375rem 1.375rem;
