--- a/sass/elements/game/_chat.scss
+++ b/sass/elements/game/_chat.scss
@@ -49,7 +49,7 @@
         margin-left: 0.75rem;
         strong {
             color: $color-red;
-        };
+        }
         @include mobileL {
             font-size: 19px;
         }
@@ -420,15 +420,26 @@
             object-fit: cover;
         }
         &-friend {
-            border-radius: 0 1.375rem 1.375rem 1.375rem;
             color: $color-black;
             background: $color-white;
-           
+            border-radius: 0.3em 1.375rem 1.375rem 0.3em;
+            &First {
+                border-radius:  1.375rem 1.375rem 1.375rem 0;
+            }
+            &Last {
+                border-radius: 0 1.375rem 1.375rem 1.375rem;
+            }
         }
         &-user {
-            border-radius: 1.375rem 0 1.375rem 1.375rem;
             color: $color-white;
             background: $color-blue;
+            border-radius:  1.375rem 0.3em 0.3em 1.375rem ;
+            &First {
+                border-radius: 1.375rem  1.375rem 0 1.375rem;
+            }
+            &Last {
+                border-radius: 1.375rem 0 1.375rem 1.375rem;
+            }
         }
         @include ipadPro {
             margin-bottom: 0.2em;
