--- a/sass/elements/game/_friends.scss
+++ b/sass/elements/game/_friends.scss
@@ -500,6 +500,9 @@
         font-size: 1.375rem;
         padding: 0.375rem 0;
         color: $color-white;
+        &-active{
+            background-color: $color-blue;
+        }
         @include desktopM {
             padding: 0.25rem 0;
         }
