improvements - profile - equipment label

--- a/sass/elements/game/_profile.scss
+++ b/sass/elements/game/_profile.scss
@@ -739,7 +739,7 @@
         display: block;
         color: $color-error;
         font-weight: 600;
-        font-size: 19px;
+        font-size: 1.188rem;
         letter-spacing: 0.063rem;
         text-align: center;
     }
