--- a/sass/elements/signInForm/_signInForm.scss
+++ b/sass/elements/signInForm/_signInForm.scss
@@ -16,6 +16,9 @@
             padding-top: 8px;
             margin-bottom: 10px;
         }
+        @include tablet {
+            margin-bottom: 15px;
+        }
     }
     &__container {
         display: flex;
@@ -23,11 +26,14 @@
         width: 1500px;
         margin-left: auto;
         margin-right: auto;
-        @include desktopM {
+        @include desktopS {
             width: 1336px;
         }
         @include laptopM {
             width: 1024px;
+        }
+        @include tablet {
+            width: 100%;
         }
     }
 
@@ -43,6 +49,9 @@
             @include desktopS {
                 width: 524px;
             }
+            @include tablet {
+                display: none;
+            }
         }
 
         &:hover {
@@ -53,6 +62,10 @@
         }
         @include laptopM {
             width: 441px;
+            
+        }
+        @include tablet {
+border: 6px solid $color-blue;
         }
     }
     &__itemTitle {
@@ -101,6 +114,13 @@
             @include desktopS {
                 width: 268px;
                 height: 268px;
+                left: 44px;
+            }
+            @include laptopM {
+                left: 41px;
+            }
+            @include tablet {
+                left: 31px;
             }
         }
 
@@ -217,6 +237,12 @@
             top: 37px;
             left: 111px;
         }
+        @include laptopM {
+            left: 108px; 
+        }
+        @include tablet{       
+                left: 97px;
+        }
     }
     &__error {
         position: absolute;
@@ -227,7 +253,13 @@
         @include desktopS {
             font-size: 10px;
             top: 35px;
-            left: 110px;
+            left: 111px;
+        }
+        @include laptopM {
+           left: 108px; 
+        }
+        @include tablet {
+            left: 97px;
         }
     }
 }
@@ -243,6 +275,12 @@
         @include desktopS {
             top: 0;
             left: 104px;
+        }
+        @include laptopM {
+            left: 101px;
+        }
+        @include tablet {
+            left: 91px;
         }
     }
     input {
@@ -262,6 +300,9 @@
             height: 30px;
             width: 217px;
             border-bottom: 3px solid $color-gold;
+        }
+        @include tablet {
+            font-size: 16px;
         }
     }
     input:-webkit-autofill {
@@ -286,6 +327,7 @@
         }
         @include laptopM {
             left: 5px;
+            
         }
      
     }
